Filtering by category

--- a/libs/question-randomizer/dashboard/randomization/ui/src/status-bar/status-bar.component.html
+++ b/libs/question-randomizer/dashboard/randomization/ui/src/status-bar/status-bar.component.html
@@ -1,17 +1,5 @@
 <div class="status-bar">
-  <div
-    class="segment answered"
-    [style.flex-grow]="answered()"
-    *ngIf="answered() > 0"
-  ></div>
-  <div
-    class="segment ahead"
-    [style.flex-grow]="ahead()"
-    *ngIf="ahead() > 0"
-  ></div>
-  <div
-    class="segment postponed"
-    [style.flex-grow]="postponed()"
-    *ngIf="postponed() > 0"
-  ></div>
+  <div class="segment answered" [style.flex-grow]="answered()"></div>
+  <div class="segment ahead" [style.flex-grow]="ahead()"></div>
+  <div class="segment postponed" [style.flex-grow]="postponed()"></div>
 </div>
