--- a/libs/shared/ui/src/card/card.component.scss
+++ b/libs/shared/ui/src/card/card.component.scss
@@ -12,5 +12,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    &__title {
+      display:flex;
+      align-items: center;
+      gap: 0.1rem;
+    }
   }
 }
