--- a/libs/shared/ui/src/controls/input-text/input-text.component.html
+++ b/libs/shared/ui/src/controls/input-text/input-text.component.html
@@ -14,28 +14,31 @@
     }"
     [attr.aria-invalid]="control.invalid"
     [attr.aria-describedby]="hint ? inputId + '-hint' : null"
-  />
+    />
   <label for="input-field" class="input-label">{{ label }}</label>
   <span class="input-highlight"></span>
   @if(icon) {
-  <svg-icon
-    class="c-pointer input-icon"
-    src="icons/{{ icon }}.svg"
-    [svgStyle]="{ width: '24px', height: '20px' }"
-  ></svg-icon>
+    <svg-icon
+      class="c-pointer input-icon"
+      src="icons/{{ icon }}.svg"
+      [svgStyle]="{ width: '24px', height: '20px' }"
+    ></svg-icon>
   }
 </div>
 
-<small *ngIf="hint" [id]="inputId + '-hint'" class="text-muted">{{
-  hint
-}}</small>
+@if (hint) {
+  <small [id]="inputId + '-hint'" class="text-muted">{{
+    hint
+  }}</small>
+}
 
-<div
-  *ngIf="control.invalid && (control.touched || control.dirty)"
-  class="invalid-feedback"
->
-  {{ getErrorMessage() }}
-</div>
+@if (control.invalid && (control.touched || control.dirty)) {
+  <div
+    class="invalid-feedback"
+    >
+    {{ getErrorMessage() }}
+  </div>
+}
 
 <!-- <label *ngIf="label" [for]="inputId">{{ label }}</label>
 
@@ -53,7 +56,7 @@
   }"
   [attr.aria-invalid]="control.invalid"
   [attr.aria-describedby]="hint ? inputId + '-hint' : null"
-/>
+  />
 
 <small *ngIf="hint" [id]="inputId + '-hint'" class="text-muted">{{
   hint
@@ -62,6 +65,6 @@
 <div
   *ngIf="control.invalid && (control.touched || control.dirty)"
   class="invalid-feedback"
->
+  >
   {{ getErrorMessage() }}
 </div> -->
