--- a/libs/shared/ui/src/paginator/paginator.component.html
+++ b/libs/shared/ui/src/paginator/paginator.component.html
@@ -5,7 +5,7 @@
   [attr.disabled]="pageIndex() === 0"
   (click)="onPage(0)"
   (keydown.enter)="onPage(0)"
->
+  >
   <<
 </span>
 
@@ -16,102 +16,112 @@
   [attr.disabled]="pageIndex() === 0"
   (click)="onPage(pageIndex() - 1)"
   (keydown.enter)="onPage(pageIndex() - 1)"
->
+  >
   <
 </span>
 
-<span
-  class="no-select"
-  *ngIf="pageIndex() > 2"
-  tabindex="0"
-  role="button"
-  (click)="onPage(0)"
-  (keydown.enter)="onPage(0)"
->
-  1
-</span>
+@if (pageIndex() > 2) {
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    (click)="onPage(0)"
+    (keydown.enter)="onPage(0)"
+    >
+    1
+  </span>
+}
 
-<span *ngIf="pageIndex() > 3" class="c-default no-select">...</span>
+@if (pageIndex() > 3) {
+  <span class="c-default no-select">...</span>
+}
 
-<span
-  class="no-select"
-  *ngIf="pageIndex() > 1"
-  tabindex="0"
-  role="button"
-  (click)="onPage(pageIndex() - 2)"
-  (keydown.enter)="onPage(pageIndex() - 2)"
->
-  {{ pageIndex() - 1 }}
-</span>
+@if (pageIndex() > 1) {
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    (click)="onPage(pageIndex() - 2)"
+    (keydown.enter)="onPage(pageIndex() - 2)"
+    >
+    {{ pageIndex() - 1 }}
+  </span>
+}
 
-<span
-  class="no-select"
-  *ngIf="pageIndex() > 0"
-  tabindex="0"
-  role="button"
-  (click)="onPage(pageIndex() - 1)"
-  (keydown.enter)="onPage(pageIndex() - 1)"
->
-  {{ pageIndex() }}
-</span>
+@if (pageIndex() > 0) {
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    (click)="onPage(pageIndex() - 1)"
+    (keydown.enter)="onPage(pageIndex() - 1)"
+    >
+    {{ pageIndex() }}
+  </span>
+}
 
 <span class="no-select" [attr.disabled]="true">{{ pageIndex() + 1 }}</span>
 
-<span
-  class="no-select"
-  *ngIf="pageIndex() < numberOfPages - 1"
-  tabindex="0"
-  role="button"
-  (click)="onPage(pageIndex() + 1)"
-  (keydown.enter)="onPage(pageIndex() + 1)"
->
-  {{ pageIndex() + 2 }}
-</span>
+@if (pageIndex() < numberOfPages - 1) {
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    (click)="onPage(pageIndex() + 1)"
+    (keydown.enter)="onPage(pageIndex() + 1)"
+    >
+    {{ pageIndex() + 2 }}
+  </span>
+}
 
-<span
-  class="no-select"
-  *ngIf="pageIndex() < numberOfPages - 2"
-  tabindex="0"
-  role="button"
-  (click)="onPage(pageIndex() + 2)"
-  (keydown.enter)="onPage(pageIndex() + 2)"
->
-  {{ pageIndex() + 3 }}
-</span>
+@if (pageIndex() < numberOfPages - 2) {
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    (click)="onPage(pageIndex() + 2)"
+    (keydown.enter)="onPage(pageIndex() + 2)"
+    >
+    {{ pageIndex() + 3 }}
+  </span>
+}
 
-<span *ngIf="pageIndex() < numberOfPages - 4" class="c-default no-select"
-  >...</span
->
+@if (pageIndex() < numberOfPages - 4) {
+  <span class="c-default no-select"
+    >...</span
+    >
+  }
 
-<span
-  class="no-select"
-  *ngIf="pageIndex() < numberOfPages - 3"
-  tabindex="0"
-  role="button"
-  (click)="onPage(numberOfPages - 1)"
-  (keydown.enter)="onPage(numberOfPages - 1)"
->
-  {{ numberOfPages }}
-</span>
+  @if (pageIndex() < numberOfPages - 3) {
+    <span
+      class="no-select"
+      tabindex="0"
+      role="button"
+      (click)="onPage(numberOfPages - 1)"
+      (keydown.enter)="onPage(numberOfPages - 1)"
+      >
+      {{ numberOfPages }}
+    </span>
+  }
 
-<span
-  class="no-select"
-  tabindex="0"
-  role="button"
-  [attr.disabled]="pageIndex() + 1 === numberOfPages"
-  (click)="onPage(pageIndex() + 1)"
-  (keydown.enter)="onPage(pageIndex() + 1)"
->
-  >
-</span>
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    [attr.disabled]="pageIndex() + 1 === numberOfPages"
+    (click)="onPage(pageIndex() + 1)"
+    (keydown.enter)="onPage(pageIndex() + 1)"
+    >
+    >
+  </span>
 
-<span
-  class="no-select"
-  tabindex="0"
-  role="button"
-  [attr.disabled]="pageIndex() + 1 === numberOfPages"
-  (click)="onPage(numberOfPages - 1)"
-  (keydown.enter)="onPage(numberOfPages - 1)"
->
-  >>
-</span>
+  <span
+    class="no-select"
+    tabindex="0"
+    role="button"
+    [attr.disabled]="pageIndex() + 1 === numberOfPages"
+    (click)="onPage(numberOfPages - 1)"
+    (keydown.enter)="onPage(numberOfPages - 1)"
+    >
+    >>
+  </span>
