--- a/libs/shared/ui/src/controls/input-check-group/input-check-group.component.scss
+++ b/libs/shared/ui/src/controls/input-check-group/input-check-group.component.scss
@@ -17,7 +17,7 @@
   display: none; /* Hide the default checkbox */
 }
 .checkbox {
-  border: 2px solid black;
+  border: 1px solid black !important;
   width: 1.6rem;
   height: 1.6rem;
   background-color: transparent;
