--- a/libs/question-randomizer/dashboard/interview/shell/src/interview-shell.component.html
+++ b/libs/question-randomizer/dashboard/interview/shell/src/interview-shell.component.html
@@ -20,13 +20,13 @@
     [libColumn]="{ propertyName: 'question', type: 'COLUMN' }"
     let-item="item"
   >
-    <div>{{ item.question }} {{ item.tags | formatTags }}</div>
+    <div>{{ item.question }}<br />{{ item.tags | formatTags }}</div>
   </ng-template>
   <ng-template
     [libColumn]="{ propertyName: 'answer', type: 'COLUMN' }"
     let-item="item"
   >
-    <div [innerHTML]="item.answer | normalizeSpace"></div>
+    <div [innerHTML]="getAnswer(item) | normalizeSpace"></div>
   </ng-template>
 </lib-table>
 }
