--- a/libs/question-randomizer/dashboard/shared/ui/src/lib/sidebar/dashboard-sidebar.component.html
+++ b/libs/question-randomizer/dashboard/shared/ui/src/lib/sidebar/dashboard-sidebar.component.html
@@ -2,6 +2,7 @@
   <h2 class="header">{{ 'dashboard.header.title' | transloco }}</h2>
   <lib-button-toggle-group
     [value]="languageToggleValue()"
+    [allowDeselect]="false"
     (toggled)="changeLanguage.emit($event ?? '')"
   >
     <lib-button-toggle value="english">{{ 'dashboard.header.languages.english' | transloco }}</lib-button-toggle>
