--- a/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.scss
+++ b/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.scss
@@ -1,30 +1,18 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: repeat(2, auto) auto;
+.layout {
+  display: flex;
   gap: 1rem;
-  //   width: 100%;
-  //   margin: auto;
 }
 
-.item1 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+.main-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 3;
 }
 
-.item2 {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
-
-.item3 {
-  grid-column: 2 / 3;
-  grid-row: 1 / 3;
-}
-
-.item4 {
-  grid-column: 1 / 3;
-  grid-row: 3 / 4;
+.categories {
+  flex: 1;
+  align-self: flex-start;
 }
 
 .status-units {
